--- a/styles.css
+++ b/styles.css
@@ -19,18 +19,19 @@ body {
     display: flex;
     flex-direction: row;
     min-height: 100vh;
+    min-width: 100vw;
     margin: 0;
     background: var(--primary-color);
 }
 
 .hero {
-    width: 35%;
-    height: inherit;
+    min-width: 35%;
+    min-height: 100%;
     background-image: url("img/space.jpg");
     background-color: #cccccc;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
 }
 
 .content {
@@ -38,7 +39,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: baseline;
-    width: 65%;
+    min-width: 65%;
 }
 
 
