--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,13 @@
     --shadow-click-color: #505050;
 
     --primary-border-radius: 10px;
+    height: 100%;
 }
 
 body {
     display: flex;
     flex-direction: row;
-    min-height: 100vh;
+    min-height: 100%;
     min-width: 100vw;
     margin: 0;
     background: var(--primary-color);
@@ -28,26 +29,28 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-width: 35%;
+    align-items: center;
     min-height: 100%;
     background-image: url("img/space.jpg");
     background-color: #cccccc;
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
+    flex: 1;
 }
 
 .logo-title {
     display: flex;
-    justify-content:space-evenly;
+    justify-content:center;
     align-items: center;
+    flex-wrap: wrap;
     position: relative;
-    bottom: 16%;
-    max-width: 100%;
+    box-sizing: border-box;
     color: #FFFFFF;
     background-color: #1a1a1a80;
     text-align: center;
-    padding:10px;
+    width: 100%;
+    text-wrap:wrap;
 }
 
 .logo-title img {
@@ -60,12 +63,29 @@ body {
     font-size: 8vmax;
 }
 
+.bg-credit {
+    position: relative;
+    top: 30%;
+    color: #ffffffbe;
+    font-weight: 100;
+    font-size: 1.2vmax;
+    text-decoration: none;
+    box-sizing: border-box;
+    padding:5px;
+    text-align: center;
+}
+
+.bg-credit a {
+    color: #ffffffbe;
+}
+
 .content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: baseline;
-    min-width: 65%;
+    /* min-width: 65%; */
+    flex: 2;
 }
 
 
@@ -135,7 +155,7 @@ fieldset {
     font-size: medium;
 }
 
-a {
+.submit-form a {
     color: var(--primary-accent-color);
     text-decoration: none;
 }
